--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,64 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>¡Deliver Quiz!</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <div id="root">
-      <h1>Hello world!</h1>
+    <div>
+      <h1>¡Deliver Quiz!</h1>
     </div>
-    <script src="index.js" type="module"></script>
+
+    <section id="principal">
+      <div class="imagenesPrincipal">
+      <img src="imagenes/estudiantes.png">
+      <img src="imagenes/profesores.png">
+    </div>
+      <button type="button" name="student" id="student"> Estudiante </button>
+      <button type="button" name="teacher" id="teacher"> Profesor </button>
+      <button type="button" name="information" id="information">?</button>
+    </section>
+    <section id="teacherView">
+      <img src="imagenes/profesores.png">
+      <h2>Docente</h2>
+      <form>
+        <div class="insertQuestion">
+         <input type="text" placeholder="Ingresar pregunta" class="quiz" id="quizSend"/>
+         <button type="button" name="send" id="send">Quiz</button>
+        </div>
+        <div class="decode">
+          <input type="text" placeholder="Insertar respuesta" class="answer"/>
+          <input type="number" placeholder="Código" class="codigo"/>
+          <button type="button" name="decode" id="decode">Descifrar</button>
+        </div>
+      </form>
+    </section>
+    <section id="studentView">
+      <img src="imagenes/estudiantes.png">
+      <h2 id="titulo">Estudiante</h2>
+      <form>
+        <p class="caja" id="question"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <input type="text" placeholder="Insertar respuesta" class="answer" id="answerOfStudet"/><br>
+        <div class="botonEstudiante">
+        <input type="number" placeholder="Código" id="codeOfStudent"/>
+        <button type="button" name="code" id="code">Enviar</button>
+      </div>
+      </form>
+    </section>
+    <section id="answer">
+      <h3 >Respuestas</h3>
+      <table id="allAnswer" >
+        <tr>
+          <td id="viewCode"></td>
+          <td id="viewAnswer"></td>
+        </tr>
+      </table>
+      <button type="button" name="back" id="back">◄</button>
+    </section>
+
+    <script  src="index.js" type="module"></script>
+
   </body>
 </html>
+
