--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
          <button type="button" name="send" id="send">Quiz</button>
         </div>
         <div class="decode">
-          <input type="text" placeholder="Insertar respuesta" class="answer"/>
-          <input type="number" placeholder="Código" class="codigo"/>
+          <input type="text" placeholder="Insertar respuesta" class="answer" id="answerTwoStudent"/>
+          <input type="number" placeholder="Código" class="codigo" id="codeTwo"/>
           <button type="button" name="decode" id="decode">Descifrar</button>
         </div>
       </form>
@@ -37,13 +37,13 @@
     <section id="studentView">
       <img src="imagenes/estudiantes.png">
       <h2 id="titulo">Estudiante</h2>
-      <form>
+      <form autocomplete="off">
         <p class="caja" id="question"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <input type="text" placeholder="Insertar respuesta" class="answer" id="answerOfStudet"/><br>
         <div class="botonEstudiante">
         <input type="number" placeholder="Código" id="codeOfStudent"/>
-        <button type="button" name="code" id="code">Enviar</button>
+        <button type="reset" name="code" id="code">Enviar</button>
       </div>
       </form>
     </section>
@@ -57,9 +57,7 @@
       </table>
       <button type="button" name="back" id="back">◄</button>
     </section>
-
     <script  src="index.js" type="module"></script>
-
   </body>
 </html>
 
