--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
     <section id="principal">
       <div class="imagenesPrincipal">
-      <img src="imagenes/estudiantes.png">
-      <img src="imagenes/profesores.png">
+      <img src="estudiantes.png">
+      <img src="profesores.png">
     </div>
       <button type="button" name="student" id="student"> Estudiante </button>
       <button type="button" name="teacher" id="teacher"> Profesor </button>
-      <button type="button" name="information" id="information">?</button>
+      <button type="button" name="information" id="information" role="link" onclick="readmeCipher.md">?</button>
     </section>
     <section id="teacherView">
-      <img src="imagenes/profesores.png">
+      <img src="profesores.png">
       <h2>Docente</h2>
       <form>
         <div class="insertQuestion">
@@ -35,7 +35,7 @@
       </form>
     </section>
     <section id="studentView">
-      <img src="imagenes/estudiantes.png">
+      <img src="estudiantes.png">
       <h2 id="titulo">Estudiante</h2>
       <form autocomplete="off">
         <p class="caja" id="question"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
