--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
       <button type="button" name="student" id="student"> Estudiante </button>
       <button type="button" name="teacher" id="teacher"> Profesor </button>
-      <button type="button" name="information" id="information" >?</button>
+      <button type="button" name="information" id="information" onclick="location.href='readmeCipher.md';" >?</button>
     </section>
     <section id="teacherView">
       <img src="profesores.png">
